--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -4,6 +4,5 @@ siga.hostname=localhost
 siga.port=8443
 siga.protocol=https
 siga.profiles.active=datafileContainer,smartId,mobileId
-logging.level.root=INFO
-siga-test.logging.enabled=false
-siga-test.logging.character-split-limit=10000
+test-files-directory=src/test/resources/
+rest-assured-console-logging=false
