SIGA-1009 Migrate add data file manifest check test

--- a/pom.xml
+++ b/pom.xml
@@ -126,7 +126,7 @@
             <groupId>io.rest-assured</groupId>
             <artifactId>xml-path</artifactId>
             <version>${rest.assured.version}</version>
-            <scope>test</scope>
+            <scope>compile</scope>
         </dependency>
 
         <dependency>
