SIGA-1241 Add central configuration for SID accounts

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -5,4 +5,5 @@ siga.port=8443
 siga.protocol=https
 siga.profiles.active=datafileContainer,smartId,mobileId
 test-files-directory=src/test/resources/
+test-sid-accounts-file=src/test/resources/accounts/sid-demo-accounts.json
 rest-assured-console-logging=true
